# doc-translator

./: .gitignore  README.md  pyproject.toml
scripts/: make_icns.py
src/doc_translator/: __init__.py  __main__.py  cli.py  config.py  document.py  ocr.py  token_counter.py  translator.py  vocabulary.py  webui.py
src/doc_translator/reader/: __init__.py  base.py  docx_reader.py  pdf_reader.py
src/doc_translator/writer/: __init__.py  base.py  docx_writer.py  markdown_writer.py
tests/fixtures/: create_sample.py  create_sample_pdf.py  sample.docx
